Fixed targeting of test_kilo_tuple
The previous commit renamed tests. One test in particular had different
options on clang. The rename broke the CMakeLists.txt for that
test. This commit fixes that.

Signed-off-by: Alecto Irene Perez <perez.cs@pm.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ if(PROJECT_IS_TOP_LEVEL)
 
     if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
         target_compile_options(
-            test_test-kilo-tuple
+            test_kilo_tuple
             PRIVATE
             -fbracket-depth=1000)
     endif()
