Removed target_compile_options on test_kilo_tuple
This was breaking clang since it was no longer being added as a target.

Signed-off-by: Alecto Irene Perez <perez.cs@pm.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,12 +81,12 @@ if(PROJECT_IS_TOP_LEVEL)
     # Add all files in directory test as tests, and link against tuplet and
     # threads
 
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-        target_compile_options(
-            test_kilo_tuple
-            PRIVATE
-            -fbracket-depth=1000)
-    endif()
+    #if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    #    target_compile_options(
+    #        test_kilo_tuple
+    #        PRIVATE
+    #        -fbracket-depth=1000)
+    #endif()
 
     set(BENCHMARK_ENABLE_TESTING OFF)
     set(BENCHMARK_ENABLE_GTEST_TESTS OFF)
