--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,6 +33,13 @@ jobs:
             build_type: Debug
             install_compiler: sudo apt install g++-10 && sudo apt install clang-10
 
+          - name: ubuntu-latest-clang-11
+            os: ubuntu-latest
+            compiler: clang++-11
+            flags: ""
+            build_type: Debug
+            install_compiler: sudo apt install g++-10 && sudo apt install clang-10
+
           - name: ubuntu-latest-clang-12
             os: ubuntu-latest
             compiler: clang++-12
@@ -52,6 +59,19 @@ jobs:
               libc++1-10
               libc++abi1-10
               libc++abi-10-dev
+
+          - name: ubuntu-latest-clang-11-libc++
+            os: ubuntu-latest
+            compiler: clang++-11
+            flags: "-stdlib=libc++"
+            build_type: Debug
+            install_compiler: >
+              sudo apt-get install
+              clang++-11
+              libc++-11-dev
+              libc++1-11
+              libc++abi1-11
+              libc++abi-11-dev
 
           - name: ubuntu-latest-clang-12-libc++
             os: ubuntu-latest
