Format CMake & Update to version 1.2.2
Signed-off-by: Alecto Irene Perez <perez.cs@pm.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,33 +2,31 @@ cmake_minimum_required(VERSION 3.14)
 
 project(
     "tuplet"
-    VERSION 1.2.1
+    VERSION 1.2.2
     DESCRIPTION "A Lightweight Tuple Implementation for Modern C++"
     HOMEPAGE_URL "https://github.com/codeinred/tuplet/"
-    LANGUAGES CXX
-)
+    LANGUAGES CXX)
 
 add_library(tuplet INTERFACE)
-add_library(tuplet::tuplet ALIAS tuplet)
+add_library(
+    tuplet::tuplet
+    ALIAS
+    tuplet)
 
 # For ${CMAKE_INSTALL_<DIR>} variables that are standarized
 include(GNUInstallDirs)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+list(
+    APPEND
+    CMAKE_MODULE_PATH
+    "${CMAKE_CURRENT_LIST_DIR}/cmake")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-target_compile_features(
-    tuplet
-    INTERFACE
-    cxx_std_20
-)
+target_compile_features(tuplet INTERFACE cxx_std_20)
 
 target_include_directories(
-    tuplet
-    INTERFACE
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
+    tuplet INTERFACE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+                     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 # Installation
 # See: https://dominikberner.ch/cmake-interface-lib/
@@ -38,37 +36,31 @@ install(
     EXPORT tuplet_Targets
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
     "tupletConfigVersion.cmake"
     VERSION ${PROJECT_VERSION}
-    COMPATIBILITY SameMajorVersion
-)
+    COMPATIBILITY SameMajorVersion)
 
 configure_package_config_file(
     "${PROJECT_SOURCE_DIR}/cmake/tupletConfig.cmake.in"
     "${PROJECT_BINARY_DIR}/tupletConfig.cmake"
-    INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake
-)
+    INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake)
 
 install(
     EXPORT tuplet_Targets
     FILE tupletTargets.cmake
     NAMESPACE tuplet::
-    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake
-)
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake)
 
 install(FILES "${PROJECT_BINARY_DIR}/tupletConfig.cmake"
               "${PROJECT_BINARY_DIR}/tupletConfigVersion.cmake"
-        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake
-)
+        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/tuplet/cmake)
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/tuplet
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 include(helper)
 
@@ -118,9 +110,7 @@ if(PROJECT_IS_TOP_LEVEL AND BUILD_TESTING)
         bench/bench-heterogenous.cpp
         bench/bench-homogenous.cpp
         bench/bench-single-elem.cpp)
-    add_executable(
-        test_tuplet
-        test/test_tuplet.cpp)
+    add_executable(test_tuplet test/test_tuplet.cpp)
     target_link_libraries(
         test_tuplet
         tuplet::tuplet
@@ -131,11 +121,15 @@ if(PROJECT_IS_TOP_LEVEL AND BUILD_TESTING)
         tuplet::tuplet
         benchmark::benchmark_main)
 
-    list(APPEND CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/Catch2)
-    list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+    list(
+        APPEND
+        CMAKE_MODULE_PATH
+        ${CMAKE_INSTALL_PREFIX}/lib/cmake/Catch2)
+    list(
+        APPEND
+        CMAKE_MODULE_PATH
+        ${catch2_SOURCE_DIR}/extras)
     include(CTest)
     include(Catch)
     catch_discover_tests(test_tuplet)
 endif()
-
-
